--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amper-promise-utils",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Ampersand's util functions for working with promises",
   "main": "dist/index.js",
   "types": "dist/types.d.ts",
@@ -24,7 +24,9 @@
     "url": "https://github.com/ampersand-tech/amper-promise-utils/issues"
   },
   "homepage": "https://github.com/ampersand-tech/amper-promise-utils#readme",
-  "dependencies": {},
+  "dependencies": {
+    "amper-utils": "git+ssh://git@github.com:ampersand-tech/amper-utils.git"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.5",
